# phorge_doorcontroller

./: .env.template  .gitignore  README.md  docker-compose.yaml  pyproject.toml
backend/: serial_mon.py
backend/access_control/: admin.py  models.py  serializers.py  urls.py  views.py
backend/access_control/migrations/: 0001_initial.py  0002_rename_card_id_cardswipelog_card_and_more.py  0003_alter_card_id_alter_card_member_and_more.py  0004_phorgemember_birth_date_alter_card_id_and_more.py  0005_alter_card_id_alter_cardswipelog_swiped_on.py  0006_alter_card_id_alter_cardswipelog_swiped_on.py  0007_alter_card_id_alter_card_last_swiped_and_more.py  0008_alter_card_id_alter_cardswipelog_swiped_on.py
backend/config/: settings.py  urls.py
infra/: Dockerfile  supervisord.conf
xiao/: code.py  read.py
